--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
+    "bootstrap-slider": "^10.3.2",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
