--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
     "bootstrap-slider": "^10.3.2",
+    "chart.js": "^2.7.3",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
