--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "3",
     "bootstrap-slider": "^10.3.2",
     "chart.js": "^2.7.3",
+    "flatpickr": "^4.5.2",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
